# MyProjectEulerSolver

./: .gitignore  CMakeLists.txt  MyProjectEulerSolver.cbp  MyProjectEulerSolver.depend  MyProjectEulerSolver.kdev4  MyProjectEulerSolver.layout  README.md
include/: AbstractSolver.h  Exercise1.h  Exercise102.h  Exercise26.h  Exercise27.h  Exercise29.h  Exercise3.h  Exercise30.h  Exercise31.h  Exercise32.h  Exercise33.h  Exercise34.h  Exercise35.h  Exercise36.h  Exercise37.h  Exercise38.h  Exercise39.h  Exercise40.h  Exercise41.h  Exercise42.h  Exercise43.h  Exercise48.h  ExerciseDeclaration.h  ExerciseFactory.h  ExercisesContainer.h  PandigitalTool.h  PrimeTool.h  Tools.h
resources/: primeList.txt
src/: AbstractSolver.cpp  Exercise1.cpp  Exercise102.cpp  Exercise26.cpp  Exercise27.cpp  Exercise29.cpp  Exercise3.cpp  Exercise30.cpp  Exercise31.cpp  Exercise32.cpp  Exercise33.cpp  Exercise34.cpp  Exercise35.cpp  Exercise36.cpp  Exercise37.cpp  Exercise38.cpp  Exercise39.cpp  Exercise40.cpp  Exercise41.cpp  Exercise42.cpp  Exercise43.cpp  Exercise48.cpp  ExerciseFactory.cpp  ExercisesContainer.cpp  PandigitalTool.cpp  PrimeTool.cpp  main.cpp
